// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` component Should render the  component 1`] = `
<DocumentFragment>
  <a
    class="c-btn"
    href="/about"
  />
</DocumentFragment>
`;

exports[` component Should render the  component 2`] = `
<DocumentFragment>
  <button
    class="c-btn"
    type="button"
  />
</DocumentFragment>
`;

exports[` component Should render the  component 3`] = `
<DocumentFragment>
  <a
    class="c-btn"
    href="https://atanas.info"
    rel="noopener noreferrer"
    target="_blank"
  />
</DocumentFragment>
`;

exports[` component Should unmount the  component 1`] = `<DocumentFragment />`;

exports[` component Should unmount the  component 2`] = `<DocumentFragment />`;

exports[` component Should unmount the  component 3`] = `<DocumentFragment />`;
